--- a/NgocShop.Data/NgocShop.Data.csproj
+++ b/NgocShop.Data/NgocShop.Data.csproj
@@ -62,9 +62,14 @@
     <Compile Include="Migrations\202302191445462_InitialDB.designer.cs">
       <DependentUpon>202302191445462_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202302251306534_AddErrorTable.cs" />
+    <Compile Include="Migrations\202302251306534_AddErrorTable.designer.cs">
+      <DependentUpon>202302251306534_AddErrorTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NgocShopDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -95,6 +100,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202302191445462_InitialDB.resx">
       <DependentUpon>202302191445462_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202302251306534_AddErrorTable.resx">
+      <DependentUpon>202302251306534_AddErrorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
