--- a/NgocShop.Data/NgocShop.Data.csproj
+++ b/NgocShop.Data/NgocShop.Data.csproj
@@ -40,6 +40,12 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -65,6 +71,14 @@
     <Compile Include="Migrations\202302251306534_AddErrorTable.cs" />
     <Compile Include="Migrations\202302251306534_AddErrorTable.designer.cs">
       <DependentUpon>202302251306534_AddErrorTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202303021349197_Intergrate-AspnetIdentity.cs" />
+    <Compile Include="Migrations\202303021349197_Intergrate-AspnetIdentity.designer.cs">
+      <DependentUpon>202303021349197_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202303021517016_ChangeKey.cs" />
+    <Compile Include="Migrations\202303021517016_ChangeKey.designer.cs">
+      <DependentUpon>202303021517016_ChangeKey.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NgocShopDbContext.cs" />
@@ -103,6 +117,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202302251306534_AddErrorTable.resx">
       <DependentUpon>202302251306534_AddErrorTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303021349197_Intergrate-AspnetIdentity.resx">
+      <DependentUpon>202303021349197_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303021517016_ChangeKey.resx">
+      <DependentUpon>202303021517016_ChangeKey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
