--- a/NgocShop.Web/NgocShop.Web.csproj
+++ b/NgocShop.Web/NgocShop.Web.csproj
@@ -966,6 +966,7 @@
     <Content Include="Scripts\plugins\i18n\angular-locale_zh.js" />
     <Content Include="Scripts\plugins\i18n\angular-locale_zu-za.js" />
     <Content Include="Scripts\plugins\i18n\angular-locale_zu.js" />
+    <Content Include="Scripts\spa\app.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -979,7 +980,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Assets\admin\" />
     <Folder Include="Assets\client\" />
-    <Folder Include="Scripts\spa\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
