--- a/NgocShop.Web/NgocShop.Web.csproj
+++ b/NgocShop.Web/NgocShop.Web.csproj
@@ -967,6 +967,7 @@
     <Content Include="Scripts\plugins\i18n\angular-locale_zu-za.js" />
     <Content Include="Scripts\plugins\i18n\angular-locale_zu.js" />
     <Content Include="Scripts\spa\app.js" />
+    <Content Include="Scripts\spa\ngocShopDirective.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
