--- a/NgocShop.Web/NgocShop.Web.csproj
+++ b/NgocShop.Web/NgocShop.Web.csproj
@@ -194,14 +194,79 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
-    <Content Include="app\app.route.js" />
-    <Content Include="app\components\products\product.routes.js" />
+    <Content Include="app\components\home\homeController.js" />
+    <Content Include="app\components\home\homeView.html" />
+    <Content Include="app\components\products\products.module.js" />
     <Content Include="app\components\products\productAddController.js" />
     <Content Include="app\components\products\productAddView.html" />
     <Content Include="app\components\products\productEditController.js" />
     <Content Include="app\components\products\productEditView.html" />
     <Content Include="app\components\products\productListController.js" />
     <Content Include="app\components\products\productListView.html" />
+    <Content Include="app\shared\modules\ngocshop.common.js" />
+    <Content Include="Assets\admin\css\AdminLTE.css" />
+    <Content Include="Assets\admin\css\AdminLTE.min.css" />
+    <Content Include="Assets\admin\css\bootstrap.css" />
+    <Content Include="Assets\admin\css\bootstrap.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-black-light.css" />
+    <Content Include="Assets\admin\css\skins\skin-black-light.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-black.css" />
+    <Content Include="Assets\admin\css\skins\skin-black.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-blue-light.css" />
+    <Content Include="Assets\admin\css\skins\skin-blue-light.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-blue.css" />
+    <Content Include="Assets\admin\css\skins\skin-blue.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-green-light.css" />
+    <Content Include="Assets\admin\css\skins\skin-green-light.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-green.css" />
+    <Content Include="Assets\admin\css\skins\skin-green.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-purple-light.css" />
+    <Content Include="Assets\admin\css\skins\skin-purple-light.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-purple.css" />
+    <Content Include="Assets\admin\css\skins\skin-purple.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-red-light.css" />
+    <Content Include="Assets\admin\css\skins\skin-red-light.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-red.css" />
+    <Content Include="Assets\admin\css\skins\skin-red.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-yellow-light.css" />
+    <Content Include="Assets\admin\css\skins\skin-yellow-light.min.css" />
+    <Content Include="Assets\admin\css\skins\skin-yellow.css" />
+    <Content Include="Assets\admin\css\skins\skin-yellow.min.css" />
+    <Content Include="Assets\admin\css\skins\_all-skins.css" />
+    <Content Include="Assets\admin\css\skins\_all-skins.min.css" />
+    <Content Include="Assets\admin\img\avatar.png" />
+    <Content Include="Assets\admin\img\avatar04.png" />
+    <Content Include="Assets\admin\img\avatar2.png" />
+    <Content Include="Assets\admin\img\avatar3.png" />
+    <Content Include="Assets\admin\img\avatar5.png" />
+    <Content Include="Assets\admin\img\boxed-bg.jpg" />
+    <Content Include="Assets\admin\img\boxed-bg.png" />
+    <Content Include="Assets\admin\img\credit\american-express.png" />
+    <Content Include="Assets\admin\img\credit\cirrus.png" />
+    <Content Include="Assets\admin\img\credit\mastercard.png" />
+    <Content Include="Assets\admin\img\credit\mestro.png" />
+    <Content Include="Assets\admin\img\credit\paypal.png" />
+    <Content Include="Assets\admin\img\credit\paypal2.png" />
+    <Content Include="Assets\admin\img\credit\visa.png" />
+    <Content Include="Assets\admin\img\default-50x50.gif" />
+    <Content Include="Assets\admin\img\icons.png" />
+    <Content Include="Assets\admin\img\photo1.png" />
+    <Content Include="Assets\admin\img\photo2.png" />
+    <Content Include="Assets\admin\img\photo3.jpg" />
+    <Content Include="Assets\admin\img\photo4.jpg" />
+    <Content Include="Assets\admin\img\user1-128x128.jpg" />
+    <Content Include="Assets\admin\img\user2-160x160.jpg" />
+    <Content Include="Assets\admin\img\user3-128x128.jpg" />
+    <Content Include="Assets\admin\img\user4-128x128.jpg" />
+    <Content Include="Assets\admin\img\user5-128x128.jpg" />
+    <Content Include="Assets\admin\img\user6-128x128.jpg" />
+    <Content Include="Assets\admin\img\user7-128x128.jpg" />
+    <Content Include="Assets\admin\img\user8-128x128.jpg" />
+    <Content Include="Assets\admin\js\app.js" />
+    <Content Include="Assets\admin\js\app.min.js" />
+    <Content Include="Assets\admin\js\demo.js" />
+    <Content Include="Assets\admin\js\pages\dashboard.js" />
+    <Content Include="Assets\admin\js\pages\dashboard2.js" />
     <Content Include="Assets\admin\libs\angular-animate.js" />
     <Content Include="Assets\admin\libs\angular-animate.min.js" />
     <Content Include="Assets\admin\libs\angular-aria.js" />
@@ -227,8 +292,14 @@
     <Content Include="Assets\admin\libs\angular-scenario.js" />
     <Content Include="Assets\admin\libs\angular-touch.js" />
     <Content Include="Assets\admin\libs\angular-touch.min.js" />
+    <Content Include="Assets\admin\libs\angular-ui-router.js" />
+    <Content Include="Assets\admin\libs\angular-ui-router.min.js" />
     <Content Include="Assets\admin\libs\angular.js" />
     <Content Include="Assets\admin\libs\angular.min.js" />
+    <Content Include="Assets\admin\libs\bootstrap.js" />
+    <Content Include="Assets\admin\libs\bootstrap.min.js" />
+    <Content Include="Assets\admin\libs\fastclick.js" />
+    <Content Include="Assets\admin\libs\fastclick.min.js" />
     <Content Include="Assets\admin\libs\i18n\angular-locale_aa-dj.js" />
     <Content Include="Assets\admin\libs\i18n\angular-locale_aa-er.js" />
     <Content Include="Assets\admin\libs\i18n\angular-locale_aa-et.js" />
@@ -973,6 +1044,12 @@
     <Content Include="Assets\admin\libs\i18n\angular-locale_zh.js" />
     <Content Include="Assets\admin\libs\i18n\angular-locale_zu-za.js" />
     <Content Include="Assets\admin\libs\i18n\angular-locale_zu.js" />
+    <Content Include="Assets\admin\libs\jquery.js" />
+    <Content Include="Assets\admin\libs\jquery.min.js" />
+    <Content Include="Assets\admin\libs\jquery.slim.js" />
+    <Content Include="Assets\admin\libs\jquery.slim.min.js" />
+    <Content Include="Assets\admin\libs\jquery.slimscroll.js" />
+    <Content Include="Assets\admin\libs\jquery.slimscroll.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
@@ -993,9 +1070,7 @@
     <Folder Include="app\shared\navigation\" />
     <Folder Include="app\shared\services\" />
     <Folder Include="App_Data\" />
-    <Folder Include="Assets\admin\css\" />
-    <Folder Include="Assets\admin\img\" />
-    <Folder Include="Assets\admin\js\" />
+    <Folder Include="Assets\admin\libs\scss\" />
     <Folder Include="Assets\client\" />
   </ItemGroup>
   <ItemGroup>
@@ -1024,6 +1099,9 @@
     <Content Include="Assets\admin\libs\angular-sanitize.min.js.map" />
     <Content Include="Assets\admin\libs\angular-touch.min.js.map" />
     <Content Include="Assets\admin\libs\angular.min.js.map" />
+    <Content Include="Assets\admin\libs\jquery.min.map" />
+    <Content Include="Assets\admin\libs\jquery.slim.min.map" />
+    <Content Include="Assets\admin\css\bootstrap.css.map" />
     <None Include="packages.config" />
     <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
