--- a/NgocShop.Web/NgocShop.Web.csproj
+++ b/NgocShop.Web/NgocShop.Web.csproj
@@ -216,6 +216,7 @@
     <Content Include="app\shared\filters\statusFilter.js" />
     <Content Include="app\shared\modules\ngocshop.common.js" />
     <Content Include="app\shared\services\apiService.js" />
+    <Content Include="app\shared\services\notificationService.js" />
     <Content Include="Assets\admin\css\AdminLTE.css" />
     <Content Include="Assets\admin\css\AdminLTE.min.css" />
     <Content Include="Assets\admin\css\bootstrap.css" />
@@ -1062,6 +1063,9 @@
     <Content Include="Assets\admin\libs\jquery.slim.min.js" />
     <Content Include="Assets\admin\libs\jquery.slimscroll.js" />
     <Content Include="Assets\admin\libs\jquery.slimscroll.min.js" />
+    <Content Include="Assets\admin\libs\toastr.css" />
+    <Content Include="Assets\admin\libs\toastr.min.css" />
+    <Content Include="Assets\admin\libs\toastr.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
@@ -1112,6 +1116,7 @@
     <Content Include="Assets\admin\libs\jquery.min.map" />
     <Content Include="Assets\admin\libs\jquery.slim.min.map" />
     <Content Include="Assets\admin\css\bootstrap.css.map" />
+    <Content Include="Assets\admin\libs\toastr.js.map" />
     <None Include="packages.config" />
     <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
